--- a/scripts/scaffold/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/scripts/scaffold/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: "🐛 Bug Report"
-description: Create a new ticket for a bug in mcpstack-tool.
+description: Create a new ticket for a bug in mcpstack-tool-builder.
 title: "🐛 [BUG] - <title>"
 labels:
   - "bug"
@@ -8,9 +8,9 @@ body:
     attributes:
       value: |
         <p align="center">
-          <img src="https://miro.medium.com/v2/resize:fit:400/1*QEps725rQjfgqNnlbRYb1g.png" alt="Harvard MIT HST Logo">
+          <img src="https://github.com/MCP-Pipeline/MCPStack-Tool-Builder/raw/main/assets/COVER.png" alt="COVER">
           <br>
-          <em>mcpstack-tool project</em>
+          <em>mcpstack-tool-builder project</em>
         </p>
   - type: checkboxes
     id: checks
@@ -32,7 +32,7 @@ body:
     id: reprod-url
     attributes:
       label: "Reproduction URL"
-      description: "If you’ve forked mcpstack-tool, provide a GitHub URL or repository link to reproduce the issue."
+      description: "If you’ve forked mcpstack-tool-builder, provide a GitHub URL or repository link to reproduce the issue."
       placeholder: "Hint: Optional, but it helps us resolve the issue faster. Leave empty if not applicable."
     validations:
       required: false
@@ -42,8 +42,8 @@ body:
       label: "Reproduction Steps"
       description: "List the steps to reproduce the bug. The more detailed, the better!"
       value: |
-        1. Install deps: `pip install -e .[dev] && pre-commit install`
-        2. Run: `python -m mcpstack_tool.cli --health`
+        1. Install deps: `uv sync && uv run pre-commit install`
+        2. Run: `X`
         3. Observe: <what happened>
       render: bash
     validations:
@@ -120,7 +120,7 @@ body:
   - type: input
     id: tool-version
     attributes:
-      label: "mcpstack-tool Version"
+      label: "mcpstack-tool-builder Version"
       description: What version are you using? If cloned, paste the commit SHA: `git rev-parse --short HEAD`.
       placeholder: "e.g., 0.1.0"
     validations:
