--- a/scripts/scaffold/.github/ISSUE_TEMPLATE/question.yml
+++ b/scripts/scaffold/.github/ISSUE_TEMPLATE/question.yml
@@ -1,5 +1,5 @@
 name: "❓ Ask a Question"
-description: Ask a question about mcpstack-tool.
+description: Ask a question about mcpstack-tool-builder.
 title: "❓ [QUESTION] - <title>"
 labels:
   - "question"
@@ -8,9 +8,9 @@ body:
     attributes:
       value: |
         <p align="center">
-          <img src="https://miro.medium.com/v2/resize:fit:400/1*QEps725rQjfgqNnlbRYb1g.png" alt="Harvard MIT HST Logo">
+          <img src="https://github.com/MCP-Pipeline/MCPStack-Tool-Builder/raw/main/assets/COVER.png" alt="COVER">
           <br>
-          <em>mcpstack-tool project</em>
+          <em>mcpstack-tool-builder project</em>
         </p>
   - type: checkboxes
     id: checks
