--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ dev = [
 [project.entry-points."mcpstack.tools"]
 your_tool_name = "mcpstack_your_tool_name.tool:YourTool"
 
+# Let MCPStack discover tool-specific CLIs (mounted by the mother library)
+[project.entry-points."mcpstack.tool_clis"]
+your_tool_name = "mcpstack_your_tool_name.cli:YourToolCLI.get_app"
+
 [tool.ruff]
 line-length = 88
 target-version = "py310"
