--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "pdm.backend"
 
 [project]
 name = "mcpstack-your-tool-name"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Create your MCPStack tool with this template repository!"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -21,7 +21,7 @@ dependencies = [
   "mcpstack>=0.0.2",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
   "pytest>=7.4",
   "ruff>=0.4.0",
