--- a/scripts/scaffold/pyproject.toml
+++ b/scripts/scaffold/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "pdm.backend"
 
 [project]
 name = "mcpstack-your-tool-name"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Create your MCPStack tool with this template repository!"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -16,12 +16,12 @@ dependencies = [
   "beartype>=0.21.0",
   "rich>=13.0.0",
   "rich-argparse>=1.4.0",
-  "mcpstack",
   "rich-pyfiglet>=1.0.0",
   "click>=8.1.8",
+  "mcpstack>=0.0.2",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
   "pytest>=7.4",
   "ruff>=0.4.0",
@@ -48,6 +48,3 @@ ignore = ["E501"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-
-[tool.uv.sources]
-mcpstack = { path = "../../MCPStack" }
